Add EmailJS integration for real email delivery

--- a/.env
+++ b/.env
@@ -18,9 +18,10 @@ FIREBASE_APP_ID=1:1077573560587:web:c1a1ffb4cd36f60d605a0e
 # ==============================================
 # 📧 GMAIL CONFIGURATION (بديل مجاني)
 # ==============================================
-GMAIL_USER=livraisonak@gmail.com
-GMAIL_APP_PASSWORD=uxza xoca eacb nlxr
-
+EMAILJS_SERVICE_ID=service_eupzdew
+EMAILJS_TEMPLATE_ID=template_o9owsdl 
+EMAILJS_PUBLIC_KEY=3M5sZiQlW-9GlSWAo
+EMAILJS_PRIVATE_KEY=aIWUdISv0EO9fQhvyM3aP  # إذا needed
 
 # ==============================================
 # 🔐 SECURITY
